Migrate to my shackle version

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
   {foil, ".*",
     {git, "https://github.com/lpgauth/foil.git", {tag, "0.1.2"}}},
   {shackle, ".*",
-    {git, "https://github.com/lpgauth/shackle.git", {tag, "0.6.1"}}}
+    {git, "https://github.com/silviucpp/shackle.git", "44182555f7bf78b80e76f3d9027c4ebca61b22a3"}}
 ]}.
 
 {edoc_opts, [
